--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -132,7 +132,7 @@ ImageBuilder:
       yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
       yum makecache
       yum install -y wget curl jq unzip git
-      yum -y install docker-ce
+      yum install -y docker-ce
       systemctl enable docker
       systemctl start docker
 
