--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -11,8 +11,8 @@ Service:
       - Name: docker
         Url: 'ros_templates/template.yaml'
         AllowedRegions:
-          - cn-beijing
           - cn-hangzhou
+          - cn-beijing
           - cn-shanghai
           - ap-southeast-1
           - cn-qingdao
@@ -89,8 +89,8 @@ Artifact:
       RegionId: ${ImageBuilder.EcsImage.RegionId}
       ImageId: ${ImageBuilder.EcsImage.SourceImageId}
     SupportRegionIds:
-      - cn-beijing
       - cn-hangzhou
+      - cn-beijing
       - cn-shanghai
       - ap-southeast-1
       - cn-qingdao
@@ -131,7 +131,7 @@ ImageBuilder:
       yum check-update --security && yum -y upgrade --security
       yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
       yum makecache
-      yum install -y wget curl jq unzip git
+      yum install -y wget curl unzip git
       yum install -y docker-ce
       systemctl enable docker
       systemctl start docker
